# cargo-license-generator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
derive_license/: Cargo.toml
derive_license/src/: lib.rs
src/: lib.rs  license.rs  main.rs
