[package]
name = "cargo-generate-license"
description = "A cargo subcommand that generates `LICENSE` files."
keywords = ["license","generator", "cli", "generate"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dscottboggs/cargo-license-generator"
version = "1.0.0"
authors = ["azu <azuciao@gmail.com>", "Scott Boggs <scott+cargo@tams.tech>"]
edition = "2021"
include = [
    "files/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
structopt = "0.2.14"
chrono = "0.4"

[dependencies.derive_license]
path = "./derive_license"