[package]
name = "cargo-generate-license_impl-license"
version = "0.1.0"
edition = "2021"
description = "a proc macro for use in cargo-generate-license"
license = "LGPL-3"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.23"
syn = "1.0.109"
